# SimilarBooksRecommendation

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  requirements_prod.txt  setup.py
.github/workflows/: ci-cd.yaml
app/: app.py
app/notebooks/: eda.ipynb
app/src/: faiss_scripts.py  router.py  schemas.py
backend/: Dockerfile  app.py  requirements_prod.txt  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 06fa188bea8a_create_books_table.py  23b6c4f8d774_initial_revision.py  3b4376a9a281_add_test_user.py  406cc191777d_update_users_table.py  70e5bc969f2e_create_users_and_books_tables.py  9b90608f69f6_try_to_fix_books_table.py  b17b6fd911f5_init_migrations.py  e661b4e4f805_create_books_table.py
backend/auth_service/: .dockerignore  Dockerfile  app.py  requirements_prod.txt
backend/auth_service/config/: custom_status.py
backend/auth_service/src/exceptions/: custom_exceptions.py
backend/auth_service/src/models/: models.py  tables.py
backend/auth_service/src/routers/: api_auth.py
backend/auth_service/src/schemas/: templates_auth.py
backend/config/: app_config.py  custom_status.py  database.py
backend/recsys_service/: Dockerfile  app.py  requirements_prod.txt  setup.py
backend/recsys_service/config/: custom_status.py
backend/search_service/: Dockerfile  app.py  requirements_prod.txt
backend/search_service/config/: app_config.py
backend/src/: models.py  redis_scripts.py  router.py  schemas.py
backend/src/exceptions/: custom_exceptions.py
backend/src/models/: models.py  tables.py  trie.py
backend/src/routers/: api_app.py  api_auth.py  api_general.py  api_qdrant.py  api_recsys.py  api_redis.py
backend/src/schemas/: tamplates.py  tamplates_app.py  templates_auth.py
backend/src/scripts/: auth.py  passwords.py  ranking.py  redis_scripts.py  sql_scripts.py
data/: средневековье.csv
frontend/: .eslintrc.cjs  Dockerfile  babel.config.js  data.json  docker-compose.yml  index.html  jest.config.ts  package-lock.json  package.json  tasks  tsconfig.json  vite.config.ts
frontend/.github/workflows/: ci-cd-frontend.yaml
frontend/src/: config.ts  index.css  main.tsx
frontend/src/app/: index.ts
frontend/src/entities/: index.ts
frontend/src/features/: index.ts
frontend/src/pages/: index.ts
frontend/src/widjets/: index.ts
k8s/backend-manifests/: deployment.yaml  make_configmap.py  make_secrets.py  service.yaml
k8s/frontend-manifests/: configmap.yaml  deployment.yaml  make_configmap.py  make_secrets.py  secrets.yaml  service.yaml
k8s/nginx-manifests/: service.yaml
notebooks/: broker.ipynb  eda.ipynb  qdrant.ipynb
src/: models.py  router.py  schemas.py
(+222 files in other folders)
